-------------------------- aqp 1.17 (2018-12-17) -------------------------
* CRAN release
* aggregateColor() gets a new feature, similar colors can be grouped via cluster::pam()
* new functions: previewColors(), colorQuantiles(), plotColorQuantiles()
* new function: horizonDepths()<-, edit top/bottom names after SPC init
* new function: profile_id()<-, edit profile IDs after init; be careful!
* bug fixes in sanity checks for horizonNames()<-

-------------------------- aqp 1.16-6 (2018-12-12) ------------------------
* partial bug fix in test_hz_logic() related to missing top AND bottom depths, needs work: https://github.com/ncss-tech/aqp/issues/65

-------------------------- aqp 1.16-5 (2018-11-21) ------------------------
* moved explainPlotSPC from SPC tutorial to aqp::explainPlotSPC()
* plotSPC() is a little better at estimating "extra" vetical / horizontal space, still needs work (https://github.com/ncss-tech/aqp/issues/62)

-------------------------- aqp 1.16-2 (2018-05-22) ------------------------
* fixing #53 and #54
* bug fix for too many decimal places in legend classes (floating point -> character issue)
* plotSPC() gets a new argument, n.legend: approximate number of classes

-------------------------- aqp 1.15.5 (2018-03-14) ------------------------
* enhancement to aggregateColor() for cases when horizon depths are missing or top/bottom logic flipped

-------------------------- aqp 1.15.4 (2018-01-29) ------------------------
* bug fix for addVolumeFraction() when fragment volume > 100%

-------------------------- aqp 1.15.3 (2018-01-24) ------------------------
* added a new argument to addDiagnosticBracket() allowing for specification of column containing diagnostic feature kind
* addBracket() now requires a data.frame with plotting details, see manual page

-------------------------- aqp 1.15.2 (2017-11-30) ------------------------
* added shannonEntropy(), confusionIndex(), and brierScore()